--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
   <h1>Hi!</h1>
   <img id="map" width=400 height=400 src="https://raw.githubusercontent.com/gar/treasure-hunt/master/images/treasuremap.png">
+  <img src="domino.jpg">
 </body>
 </html>
