--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <h1>Hi!</h1>
+  <h1>Hello!</h1>
   <img id="map" width=400 height=400 src="https://raw.githubusercontent.com/gar/treasure-hunt/master/images/treasuremap.png">
   <img src="domino.jpg">
 </body>
